--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -670,6 +670,9 @@ strong {
 .bdb-gray {
   border-bottom: 1px solid #959595;
 }
+.bdb-dark-gray {
+  border-bottom: 1px solid #c9c9c9;
+}
 .bd-none {
   border: none !important;
 }
