장바구니 > 결제하기 폼 수정 업로드

--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -219,7 +219,8 @@ html {
   }
   table {
 	border-spacing: 0;
-	border-collapse: collapse;
+  border-collapse: collapse;
+  width: 100%;
   }
   td,
   th {
