--- a/public/css/willbes/basic.css
+++ b/public/css/willbes/basic.css
@@ -27,7 +27,7 @@
 
 /* NanumGothic Regular */
 @font-face {
-	font-family: "NanumGothic-ExtraBold";
+	font-family: "NanumGothic-Regular";
 	src: url("../../fonts/NanumGothic/NanumGothic-Regular.eot");
 	src: url("../../fonts/NanumGothic/NanumGothic-Regular.eot?#iefix") format('embedded-opentype'),
 			 url("../../fonts/NanumGothic/NanumGothic-Regular.woff2") format('woff2'),
