장바구니 >  무통장 입급 완료 페이지 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2424,11 +2424,17 @@ table.profTable tr td .priceWrap {
 .willbes-Buy-Price tbody tr td.price {
     padding-right: 15px;
 }
+.willbes-Buy-Price tbody tr td.price span {
+    vertical-align: baseline;
+}
 .willbes-Buy-Price tbody tr td.total-price {
     font-size: 23px;
     line-height: 110px;
     padding-right: 35px;
     border-bottom: none;
+}
+.willbes-Buy-Price tbody tr td.total-price span {
+    vertical-align: baseline;
 }
 .willbes-Buy-Table .lecInfoTable {
     padding: 20px 0 20px 10px;
